# yt-downloader-bot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/bot/: __init__.py  config.py  main.py
src/bot/handlers/: __init__.py  video.py
src/bot/services/: __init__.py  downloader.py  rate_limiter.py
src/bot/validators/: __init__.py  url.py
tests/: __init__.py  conftest.py  test_config.py  test_downloader.py  test_handlers.py  test_main.py  test_rate_limiter.py  test_url_validator.py
